objects/PR_SetupPageSearchMetadataStream_K7M3X_S__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detailed_error__c</fullName>
        <label>Detailed Error</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error_code__c</fullName>
        <label>Error Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error_context__c</fullName>
        <label>Error Context</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error_fields__c</fullName>
        <label>Error Fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error_row__c</fullName>
        <label>Error Row</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error_timestamp__c</fullName>
        <label>Error Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>